# SillyMUD

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
lib/: login  tinyworld.mob  tinyworld.wld  tinyworld.zon
main/: CMakeLists.txt  act.move.c  act.obj2.c  board.c  comm.c  config.h  convert.c  db.c  esp_cmd_system.c  esp_main.c  esp_wifi.c  fight.c  handler.c  hash.h  idf_component.yml  interpreter.c  limits.c  magic.c  mobact.c  structs.h  utility.c  utility.h
src/: Makefile  act.info.c  act.obj1.c  act.other.c  act.wizard.c  board.c  comm.c  config.h  create.c  db.c  db.h  hash.c  hash.h  interpreter.c  magic3.c  modify.c  protos.h  reception.c  security.c  shop.c  signals.c  spec_assign.c  spec_procs.c  spec_procs2.c  structs.h  syslog.h  utility.c
