idf_component_register(
SRCS
    "act.comm.c"
    "act.info.c"
    "act.move.c"
    "act.obj1.c"
    "act.obj2.c"
    "act.off.c"
    "act.other.c"
    "act.social.c"
    "act.wizard.c"
    "board.c"
    "comm.c"
    "constants.c"
    "convert.c"
    "create.c"
    "db.c"
    "fight.c"
    "handler.c"
    "hash.c"
    "Heap.c"
    "interpreter.c"
    "intrinsics.c"
    "limits.c"
    "magic.c"
    "magic2.c"
    "magic3.c"
    "magicutils.c"
    "main.c"
    "mobact.c"
    "modify.c"
    "multiclass.c"
    "Opinion.c"
    "parser.c"
    "reception.c"
    "security.c"
    "shop.c"
    "signals.c"
    "skills.c"
    "Sound.c"
    "spec_assign.c"
    "spec_procs.c"
    "spec_procs2.c"
    "spec_procs3.c"
    "spell_parser.c"
    "spells1.c"
    "spells2.c"
    "Trap.c"
    "utility.c"
    "weather.c"

    "esp_main.c"
    "esp_wifi.c"
    "esp_cmd_system.c"
PRIV_REQUIRES
    spi_flash
    nvs_flash
    console
    esp_event
    esp_wifi
    fatfs
    esp_psram
INCLUDE_DIRS ""
)
